--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,13 +21,12 @@ requirements:
   host:
     - pip
     - python >=3.6
-    - setuptools-scm
-    - setuptools-scm ==6.0.1
+    - setuptools-scm >=6.3.1
   run:
     - httpx >=0.18.2
     - python >=3.6
     - python-dateutil >=2.8.1
-    - fsspec ==2021.7.0
+    - fsspec >=2021.7.0
 
 test:
   imports:
