--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - python >=3.6
     - setuptools-scm >=6.3.1
   run:
-    - httpx ==0.20.0
+    - httpx >=0.20.0,<1.0.0
     - python >=3.6
     - python-dateutil >=2.8.1
     - fsspec >=2021.7.0
