--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,8 +20,8 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.6
-    - setuptools-scm >=6.3.1
+    - python >=3.7
+    - hatchling
   run:
     - httpx >=0.20.0,<1.0.0
     - python >=3.7
