--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,7 +21,7 @@ requirements:
   host:
     - pip
     - python >=3.7
-    - hatchling
+    - hatchling >=1.9.0
   run:
     - httpx >=0.20.0,<1.0.0
     - python >=3.7
