--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - pip
     - python >=3.7
     - hatchling >=1.9.0
+    - hatch-vcs
   run:
     - httpx >=0.20.0,<1.0.0
     - python >=3.7
